--- a/index.html
+++ b/index.html
@@ -1,255 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Ruleta Spelling Bee</title>
-<style>
-  body {
-    background: #f4f4f4;
-    font-family: 'Arial', sans-serif;
-    text-align: center;
-    padding: 20px;
-    color: #333;
-  }
-  h1 {
-    margin-bottom: 10px;
-  }
-  #pointer {
-    width: 0; 
-    height: 0; 
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-bottom: 40px solid #333;
-    margin: 0 auto;
-    position: relative;
-    top: 5px;
-  }
-  #ruleta {
-    width: 400px;
-    height: 400px;
-    border: 8px solid #999;
-    border-radius: 50%;
-    margin: 20px auto;
-    background: #fff;
-    position: relative;
-    transition: transform 3s ease-out;
-    overflow: hidden;
-  }
-  button {
-    background: #007BFF;
-    color: white;
-    padding: 15px 30px;
-    border: none;
-    border-radius: 10px;
-    font-size: 18px;
-    cursor: pointer;
-    margin: 10px;
-  }
-  #resultado {
-    margin-top: 30px;
-    font-size: 40px;
-    font-weight: bold;
-    color: #007BFF;
-    background: #fff;
-    padding: 20px 30px;
-    border-radius: 12px;
-    display: inline-block;
-    min-width: 250px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  }
-  #contador {
-    margin-top: 10px;
-    font-size: 18px;
-    color: #666;
-  }
-  #palabraGrande {
-    display: none;
-    font-size: 80px;
-    font-weight: bold;
-    color: #fff;
-    background: linear-gradient(135deg, #007BFF, #00C6FF);
-    padding: 40px 60px;
-    border-radius: 20px;
-    box-shadow: 0 8px 25px rgba(0,0,0,0.3);
-    margin: 40px auto;
-    max-width: 90%;
-    word-wrap: break-word;
-    animation: aparecer 1s ease-in-out;
-  }
-  #siguienteBtn {
-    display: none;
-    background: #28a745;
-    color: white;
-    padding: 15px 40px;
-    border: none;
-    border-radius: 12px;
-    font-size: 22px;
-    cursor: pointer;
-    margin-top: 30px;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.2);
-    transition: background 0.3s;
-  }
-  #siguienteBtn:hover {
-    background: #218838;
-  }
-  @keyframes aparecer {
-    from { transform: scale(0.5); opacity: 0; }
-    to { transform: scale(1); opacity: 1; }
-  }
-</style>
+  <meta charset="UTF-8">
+  <title>Ruleta de Deletreo</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin-top: 50px;
+      background: #f0f4f8;
+    }
+    #ruleta {
+      width: 300px;
+      height: 300px;
+      border: 10px solid #444;
+      border-radius: 50%;
+      margin: 20px auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: conic-gradient(#ff9f1c 0% 25%, #2ec4b6 25% 50%, #e71d36 50% 75%, #8ecae6 75% 100%);
+      transition: transform 3s ease-out;
+    }
+    #palabra {
+      display: none;
+      font-size: 60px;
+      font-weight: bold;
+      color: #fff;
+      background: #023047;
+      padding: 50px;
+      border-radius: 20px;
+      box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
+      margin-top: 100px;
+    }
+    #siguiente {
+      display: none;
+      margin-top: 30px;
+      font-size: 20px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 10px;
+      background: #219ebc;
+      color: #fff;
+      cursor: pointer;
+    }
+    #siguiente:hover {
+      background: #126782;
+    }
+  </style>
 </head>
 <body>
+  <h1>Ruleta del Concurso de Deletreo</h1>
+  <div id="ruleta">🎡</div>
+  <button onclick="girar()">Girar</button>
 
-<h1>🎯 Ruleta Spelling Bee 2025</h1>
-<p>Presiona primero “Activar voz” para que funcione en celular</p>
+  <div id="palabra"></div>
+  <button id="siguiente" onclick="reiniciar()">Siguiente</button>
 
-<button id="activarVozBtn">🔊 Activar voz</button>
-<div id="pointer"></div>
-<div id="ruleta"></div>
-<button id="girarBtn" disabled>🎲 Girar la ruleta</button>
+  <script>
+    const palabras = ["Elefante", "Mariposa", "Hipopótamo", "Biblioteca", "Ornitorrinco", "Helicóptero"];
+    let angulo = 0;
 
-<div id="resultado">Esperando...</div>
-<div id="contador"></div>
+    function girar() {
+      const vueltas = Math.floor(Math.random() * 5) + 5;
+      const extra = Math.floor(Math.random() * 360);
+      angulo += vueltas * 360 + extra;
+      document.getElementById("ruleta").style.transform = `rotate(${angulo}deg)`;
 
-<div id="palabraGrande">WORD</div>
-<button id="siguienteBtn">➡️ Siguiente</button>
+      const palabra = palabras[Math.floor(Math.random() * palabras.length)];
 
-<!-- Sonido de ruleta -->
-<audio id="ruletaSound">
-  <source src="https://actions.google.com/sounds/v1/ambiences/roulette_wheel.ogg" type="audio/ogg">
-  <source src="https://actions.google.com/sounds/v1/ambiences/roulette_wheel.mp3" type="audio/mpeg">
-</audio>
-
-<script>
-  let palabras = [
-    "accurate","adventure","alphabet","amazing","answer","athlete","balloon","believe","biology","bravery",
-    "calculate","carbon","channel","climate","cooperation","courage","decimal","democracy","diagram","discover",
-    "eclipse","electricity","elephant","encyclopedia","energy","environment","equation","exercise","explorer","favorite",
-    "fiction","fraction","freedom","galaxy","generous","geometry","gravity","habitat","harvest","horizon",
-    "important","invention","island","journal","journey","justice","keyboard","kindness","knowledge","language",
-    "legend","library","literature","logic","magnet","measurement","meteor","molecule","mountain","mystery",
-    "nature","nervous","nutrition","observatory","ocean","optimistic","orbit","organism","oxygen","parade",
-    "percentage","planet","poetry","polite","puzzle","question","quiet","radius","receipt","recycle",
-    "renewable","responsibility","rhythm","satellite","scientist","shelter","signal","sincere","sphere","squirrel",
-    "sustainability","symbol","telescope","temperature","tornado","traffic","triangle","umbrella","unique","update",
-    "vacation","valuable","variable","velocity","village","volcano","warrior","weather","wilderness","wonder",
-    "x-ray","xylophone","yacht","yawn","yield","yogurt","youth","zebra","zipper","zone"
-  ];
-
-  let ruleta = document.getElementById("ruleta");
-  let resultado = document.getElementById("resultado");
-  let contador = document.getElementById("contador");
-  let girarBtn = document.getElementById("girarBtn");
-  let activarVozBtn = document.getElementById("activarVozBtn");
-  let ruletaSound = document.getElementById("ruletaSound");
-  let palabraGrande = document.getElementById("palabraGrande");
-  let siguienteBtn = document.getElementById("siguienteBtn");
-
-  let selectedVoice = null;
-
-  function actualizarContador() {
-    contador.textContent = `Quedan ${palabras.length} palabras.`;
-  }
-
-  function dibujarRuleta() {
-    ruleta.innerHTML = ""; 
-    let total = palabras.length;
-    let angleStep = 360 / total;
-    palabras.forEach((palabra, i) => {
-      let segment = document.createElement("div");
-      segment.style.position = "absolute";
-      segment.style.width = "50%";
-      segment.style.height = "50%";
-      segment.style.background = `hsl(${(i * 10) % 360}, 50%, 85%)`;
-      segment.style.transformOrigin = "100% 100%";
-      segment.style.transform = `rotate(${i * angleStep}deg) skewY(${90 - angleStep}deg)`;
-      ruleta.appendChild(segment);
-    });
-    actualizarContador();
-  }
-
-  dibujarRuleta();
-
-  function loadVoices() {
-    let voices = speechSynthesis.getVoices();
-    selectedVoice = voices.find(v => v.name.includes("Google US English")) ||
-                    voices.find(v => v.name.includes("Samantha")) ||
-                    voices.find(v => v.lang === "en-US") ||
-                    voices.find(v => v.lang === "en-GB") ||
-                    voices[0];
-  }
-
-  speechSynthesis.onvoiceschanged = loadVoices;
-
-  function speakWord(word) {
-    if (!selectedVoice) loadVoices();
-    let utter = new SpeechSynthesisUtterance(word);
-    utter.voice = selectedVoice;
-    utter.lang = "en-US";
-    utter.rate = 0.85;
-    speechSynthesis.speak(utter);
-  }
-
-  activarVozBtn.addEventListener("click", () => {
-    speakWord("Voice activated");
-    girarBtn.disabled = false;
-    activarVozBtn.disabled = true;
-    activarVozBtn.textContent = "✅ Voz activada";
-  });
-
-  girarBtn.addEventListener("click", () => {
-    if (palabras.length === 0) {
-      resultado.textContent = "✅ ¡No quedan más palabras!";
-      girarBtn.disabled = true;
-      return;
+      setTimeout(() => {
+        document.getElementById("ruleta").style.display = "none";
+        document.querySelector("button").style.display = "none"; // Esconde botón girar
+        document.getElementById("palabra").innerText = palabra;
+        document.getElementById("palabra").style.display = "inline-block";
+        document.getElementById("siguiente").style.display = "inline-block";
+      }, 10000); // 10 segundos
     }
 
-    let elegido = Math.floor(Math.random() * palabras.length);
-    let palabra = palabras[elegido];
-    palabras.splice(elegido, 1);
-
-    ruletaSound.currentTime = 0;
-    ruletaSound.play();
-
-    let vueltas = 4 * 360; 
-    let extra = Math.floor(Math.random() * 360); 
-    let totalGiro = vueltas + extra;
-
-    ruleta.style.transition = "transform 3s ease-out";
-    ruleta.style.transform = `rotate(${totalGiro}deg)`;
-
-    setTimeout(() => {
-      ruletaSound.pause();
-      resultado.textContent = `🎉 ${palabra.toUpperCase()} 🎉`;
-      speakWord(palabra);
-      dibujarRuleta();
-
-      // Después de 10 segundos mostrar palabra gigante y botón siguiente
-      setTimeout(() => {
-        ruleta.style.display = "none";
-        document.getElementById("pointer").style.display = "none";
-        resultado.style.display = "none";
-
-        palabraGrande.style.display = "block";
-        palabraGrande.textContent = palabra.toUpperCase();
-        siguienteBtn.style.display = "inline-block";
-        girarBtn.disabled = true;
-      }, 10000);
-    }, 3000);
-  });
-
-  siguienteBtn.addEventListener("click", () => {
-    palabraGrande.style.display = "none";
-    siguienteBtn.style.display = "none";
-    ruleta.style.display = "block";
-    document.getElementById("pointer").style.display = "block";
-    resultado.style.display = "block";
-    resultado.textContent = "Esperando...";
-    girarBtn.disabled = false;
-  });
-</script>
+    function reiniciar() {
+      document.getElementById("ruleta").style.display = "flex";
+      document.querySelector("button").style.display = "inline-block";
+      document.getElementById("palabra").style.display = "none";
+      document.getElementById("siguiente").style.display = "none";
+    }
+  </script>
 </body>
 </html>
+
+
 
 
 
